src/sass/components/_org-cards.scss
.has-nested-card {
  > .slds-card__header {
    margin-bottom: 0;
  }

  > .slds-card__body {
    margin-top: 0;
  }
}

.nested-card {
  .slds-card__header {
    padding-left: 0;
    padding-right: 0;
  }
}

// override min-width and force header to wrap on nested card headers
.wrap-inner-truncate {
  .slds-card__header {
    flex-wrap: wrap;
  }

  .slds-has-flexi-truncate {
    min-width: auto;
    margin-right: $spacing-x-small;
  }
}

